# neopilot

./: .gitignore  .rules  Cargo.toml  Dockerfile-cross.dockerignore  LICENSE-APACHE  README.md  compose.yml  docker-compose.sql  flake.nix  typos.toml
.cargo/: ci-config.toml  collab-config.toml  config.toml
.config/: hakari.toml
.neopilot/: debug.json  settings.json
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_api/src/: extension_api.rs  http_client.rs  process.rs  settings.rs
crates/extension_api/wit/since_v0.0.1/: extension.wit
crates/extension_api/wit/since_v0.0.4/: extension.wit
crates/extension_api/wit/since_v0.0.6/: extension.wit
crates/extension_api/wit/since_v0.1.0/: extension.wit  nodejs.wit
crates/extension_api/wit/since_v0.2.0/: extension.wit
crates/extension_api/wit/since_v0.3.0/: extension.wit
crates/extension_api/wit/since_v0.4.0/: extension.wit
crates/extension_api/wit/since_v0.5.0/: extension.wit  github.wit
crates/extension_api/wit/since_v0.6.0/: extension.wit
crates/neopilot_llm_client/: Cargo.toml  README.md
crates/neopilot_llm_client/src/: neopilot_llm_client.rs
docs/: README.md  book.toml
extensions/: EXTRACTION.md  README.md
nix/: build.nix  shell.nix
script/: build-docker  bump-neopilot-minor-versions  bump-neopilot-patch-version  bundle-linux  bundle-mac  collab-flamegraph  crate-dep-graph  create-migration  deploy-postgrest  determine-release-channel  draft-release-notes  drop-test-dbs  generate-licenses  generate-licenses-csv  get-preview-channel-changes  histogram  prompts  (+21 more)
(+767 files in other folders)
